--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "url": "https://github.com/feross/standard/issues"
   },
   "dependencies": {
+    "concat-stream": "^1.4.7",
     "debug": "^2.1.1",
     "eslint": "^0.15.0",
     "find-root": "^0.1.1",
