Add jsx support for jscs

--- a/rc/.jscsrc
+++ b/rc/.jscsrc
@@ -4,5 +4,6 @@
   "esnext": true,
   "requireOperatorBeforeLineBreak": ["=", "+", "-", "/", "*", "==", "===", "!=", "!==", ">", ">=", "<", "<="],
   "requireSpacesInForStatement": true,
-  "validateLineBreaks": "LF"
+  "validateLineBreaks": "LF",
+  "esprima" : "esprima-fb"
 }
